# OfflineImapGenerator

./: .gitignore  .gitmodules  README.org  cabal.project
offlineimapgenerator/: .gitignore  Makefile  offlineimapgenerator.cabal  package.yaml  shell.nix
offlineimapgenerator/app/: Main.hs
offlineimapgenerator/src/: OfflineImapGenerator.hs
