cabal-version: 1.12

name:           offlineimapgenerator
version:        0.0.0.1
synopsis:       Generator for offlineimap that updates certificate fingerprints.
description:    Generator for offlineimap that updates certificate fingerprints by
                reading a template file and writing a result file (with updated
                fingerprints).
category:       IMAP, Ini-file, OpenSSL, Certificate, e-mail
stability:      development
license:        GPL-3
build-type:     Simple

library
  exposed-modules:
      OfflineImapGenerator
  other-modules:
      Paths_offlineimapgenerator
  hs-source-dirs:
      src
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-type-defaults -fno-warn-orphans
  build-depends:
      base
    , foldl
    , publicsuffix
    , text
    , turtle
  default-language: Haskell2010

executable offlineimapgenerator
  main-is: Main.hs
  other-modules:
      Paths_offlineimapgenerator
  hs-source-dirs:
      app
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-type-defaults -fno-warn-orphans -threaded
  build-depends:
      base
    , offlineimapgenerator
    , optparse-applicative
  default-language: Haskell2010
